deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nbadeployment
  labels:
    app: nbaapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nbaapp
  template:
    metadata:
      labels:
        app: nbaapp
    spec:
      containers:
      - name: nbastats1
        image: nbastats.azurecr.io/nbaapp:latest
        ports:
        - containerPort: 5000
