nba.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nbaapp
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: nbaapp
#   template:
#     metadata:
#       labels:
#         app: nbaapp
#     spec:
#       nodeSelector:
#         "beta.kubernetes.io/os": linux
#       containers:
#       - name: nbaapp
#         image: tiangolo/uwsgi-nginx-flask:python3.7
#         resources:
#           requests:
#             cpu: 100m
#             memory: 128Mi
#           limits:
#             cpu: 250m
#             memory: 256Mi
        # ports:
        # - containerPort: 6379
        #   name: redis
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: azure-vote-back
# spec:
#   ports:
#   - port: 6379
#   selector:
#     app: azure-vote-back
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nbaappfrontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nbaappfrontend
  template:
    metadata:
      labels:
        app: nbaappfrontend
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: nbaappfrontend
        image: nbastats.azurecr.io/nbaappfrontend:latest
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 250m
            memory: 512Mi
        ports:
        - containerPort: 5000
        # env:
        # - name: REDIS
        #   value: "azure-vote-back"
---
apiVersion: v1
kind: Service
metadata:
  name: nbaappfrontend
spec:
  type: LoadBalancer
  ports:
  - port: 5000
  selector:
    app: nbaappfrontend
